--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Eat Healthy</title>
-    <script src="https://developer.edamam.com/attribution/badge.js"></script>
+    <!-- <script src="https://developer.edamam.com/attribution/badge.js"></script> -->
     <!-- <script src="https://developers.kakao.com/sdk/js/kakao.js"></script> -->
   </head>
   <body>
