--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app"/>
+    <title>Eat Healthy</title>
+    <meta name="title" content="Eat Healthy">
+    <meta name="description" content="Search for recipes and analyze the nutrients in your meal!">
+
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicon/favicon-96x96.png">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-icon-180x180.png">
     <meta name="msapplication-TileColor" content="#ffffff">
@@ -18,12 +22,25 @@
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
+      
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Eat Healthy</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://savinpark.github.io/Eat-Healthy/">
+    <meta property="og:title" content="Eat Healthy">
+    <meta property="og:description" content="Search for recipes and analyze the nutrients in your meal!">
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://savinpark.github.io/Eat-Healthy/">
+    <meta property="twitter:title" content="Eat Healthy">
+    <meta property="twitter:description" content="Search for recipes and analyze the nutrients in your meal!">
+    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <!-- <script src="https://developer.edamam.com/attribution/badge.js"></script> -->
     <!-- <script src="https://developers.kakao.com/sdk/js/kakao.js"></script> -->
   </head>
