--- a/public/index.html
+++ b/public/index.html
@@ -33,14 +33,16 @@
     <meta property="og:url" content="https://savinpark.github.io/Eat-Healthy/">
     <meta property="og:title" content="Eat Healthy">
     <meta property="og:description" content="Search for recipes and analyze the nutrients in your meal!">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
-
+    <meta property="og:image" content="%PUBLIC_URL%/opengraph.png">
+    <!-- <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
+    
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://savinpark.github.io/Eat-Healthy/">
     <meta property="twitter:title" content="Eat Healthy">
     <meta property="twitter:description" content="Search for recipes and analyze the nutrients in your meal!">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="%PUBLIC_URL%/opengraph.png">
+    <!-- <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
     <!-- <script src="https://developer.edamam.com/attribution/badge.js"></script> -->
     <!-- <script src="https://developers.kakao.com/sdk/js/kakao.js"></script> -->
   </head>
