--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
     <meta property="twitter:title" content="Eat Healthy">
     <meta property="twitter:description" content="Search for recipes and analyze the nutrients in your meal!">
     <meta property="twitter:image" content="%PUBLIC_URL%/opengraph.png">
-    <!-- <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
-    <!-- <script src="https://developer.edamam.com/attribution/badge.js"></script> -->
+
+    <script src="https://developer.edamam.com/attribution/badge.js"></script>
     <!-- <script src="https://developers.kakao.com/sdk/js/kakao.js"></script> -->
   </head>
   <body>
